Revision history for Perl extension Test::Harness

2.47_02 Tue Mar  1 23:15:47 CST 2005
    [THINGS THAT MIGHT BREAK YOUR CODE]
    * Test directives for skip tests used to be anything that matches
      /^skip/i, like the word "skipped", but now it must match
      /^skip\s+/i.

    [ENHANCEMENTS]
    * T::H now sets environment variable HARNESS_VERSION, in case a test
      program wants to know what version of T::H it's running under.

2.47_01 Mon Feb 21 01:14:13 CST 2005
    [FIXES]
    * Fixed a problem submitted by Craig Berry:

        Several of the Test::Harness tests now fail on VMS with the
        following warning:

        Can't find string terminator "]" anywhere before EOF at -e line 1.

        The problem is that when a command is piped to the shell and that
        command has a newline character embedded in it, the part after
        the newline is invisible to the shell. The patch below corrects
        that by escaping the newline so it is not subject to variable
        interpolation until it gets to the child's Perl one-liner.

    [ENHANCEMENTS]
    * Test::Harness::Straps now has diagnostic gathering without changing
      how tests are run.  It also adds these messages by default.
      Note that the new method, _is_diagnostic(), is for internal
      use only.  It may change soon.  Thanks to chromatic.

    [DOCUMENTATION]
    * Expanded Test::Harness::TAP.pod, and added examples.

    * Fixed a crucial documentation typo in Test::Harness::Straps.

2.46    Thu Jan 20 11:50:59 CST 2005
    Released.

2.45_02 Fri Dec 31 14:57:33 CST 2004
    [ENHANCEMENTS]
    * Turns off buffering on both STDERR and STDOUT, so that the two
      output handles don't get out of sync with each other.  Thanks to
      David Wheeler.

    * No longer requires, or supports, the HARNESS_OK_SLOW environment
      variable.  Test counts are only updated once per second, which
      used to require having HARNESS_OK_SLOW set.

2.45_01 Fri Dec 17 22:39:17 CST 2004