@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Test-Harness
-version:      2.47_02
+version:      2.47_03
 version_from: lib/Test/Harness.pm
 installdirs:  perl
 requires:
