@@ -10,16 +10,18 @@ BEGIN {
     }
 }
 
-use Test::More tests => 5;
+use Test::More tests => 6;
 
 BEGIN { use_ok 'Test::Harness' }
-BEGIN { diag( "Testing Test::Harness $Test::Harness::VERSION" ) unless $ENV{PERL_CORE}}
+BEGIN { diag( "Testing Test::Harness $Test::Harness::VERSION under Perl $] and Test::More $Test::More::VERSION" ) unless $ENV{PERL_CORE}}
 
 BEGIN { use_ok 'Test::Harness::Straps' }
 
 BEGIN { use_ok 'Test::Harness::Iterator' }
 
 BEGIN { use_ok 'Test::Harness::Assert' }
+
+BEGIN { use_ok 'Test::Harness::Point' }
 
 # If the $VERSION is set improperly, this will spew big warnings.
 BEGIN { use_ok 'Test::Harness', 1.1601 }
