@@ -1,5 +1,15 @@
 #!perl -Tw
 
+BEGIN {
+    if ( $ENV{PERL_CORE} ) {
+        chdir 't';
+        @INC = '../lib';
+    }
+    else {
+        unshift @INC, 't/lib';
+    }
+}
+
 use strict;
 use Test::More tests => 23;
 
