@@ -1,5 +1,12 @@
 Revision history for Perl extension Test::Harness
 
+NEXT Wed Mar  2 16:52:55 CST 2005
+    [THINGS THAT MIGHT BREAK YOUR CODE]
+    * Test::Harness now requires Perl 5.005_03 or above.
+
+    [FIXES]
+    * Fixed incorrect "confused by tests in wrong order" error in 2.47_02.
+
 2.47_02 Tue Mar  1 23:15:47 CST 2005
     [THINGS THAT MIGHT BREAK YOUR CODE]
     * Test directives for skip tests used to be anything that matches
